fix: fixing the tag annotations
